@@ -72,6 +72,9 @@ typedef struct _cups_globals_s		/**** CUPS global state data ****/
 					/* Number of server settings */
   cups_option_t		*cupsd_settings;/* Server settings */
 
+  /* file.c */
+  cups_file_t		*stdio_files[3];/* stdin, stdout, stderr */
+
   /* http.c */
   char			http_date[256];	/* Date+time buffer */
 
